test/invalidImports/contentSharingService.mock.ts
import {
  IA,
  IB,
} from "./contentSharingService.interface";
import { C } from "./contentSharingService";

export class CC extends C {}
export class B implements IB {}
export class A implements IA {}
